# constensor

./: .typos.toml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
constensor-core/: Cargo.toml
constensor-core/benches/: cpu_graph.rs
constensor-core/examples/hello_world/: main.rs
constensor-core/examples/matmul/: main.rs
constensor-core/src/: device.rs  dtype.rs  error.rs  graph.rs  graphtensor.rs  lib.rs  storage.rs  tensor.rs
constensor-core/src/cpu_storage/: mod.rs  pool.rs
constensor-core/src/cuda_backend/: error.rs  mod.rs  util.rs
constensor-core/src/dtype/: gemm.rs  mod.rs  rand.rs  simd_ops.rs
constensor-core/src/tensor/: concretetensor.rs  graphtensor.rs  mod.rs
constensor-core/tests/: cast.rs  fma.rs  init.rs  ops.rs
constensor-cuda-kernels/: Cargo.toml  build.rs
constensor-cuda-kernels/src/: arange.cu  fill.cu  lib.rs
src/: device.rs  dtype.rs  error.rs  graphtensor.rs  lib.rs  shape.rs  storage.rs  tensor.rs
src/cuda_backend/: error.rs  mod.rs
src/cuda_backend/kernels/: fill.cu
tests/: binary_ops.rs  init.rs  ops.rs  shape.rs
