[workspace]
members = [
    "constensor-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "ML framework featuring compile time checks and accelerated by a JIT compiler."
repository = "TODO"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cudarc = { version = "0.11.5", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
thiserror = "1.0.61"
constensor-cuda-kernels = { path = "./constensor-cuda-kernels", version = "0.1.0" }
half = "2.4.1"
