[workspace]
members = [
    "constensor-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "ML framework featuring compile time checks and accelerated by a JIT compiler."
repository = "TODO"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cudarc = { version = "0.16.1", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
thiserror = "1.0.61"
half = "2.4.1"
petgraph = "0.8.1"
dirs = "5.0.1"
rayon = "1.10.0"
gemm = "0.18"
num_cpus = "1.16.0"
rand = "0.9.1"
rand_distr = "0.5.1"
