[package]
name = "constensor-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
cudarc = { workspace = true, optional = true }
thiserror.workspace = true
half = { workspace = true, optional = true }

[features]
default = []
all = ["cuda", "half", "bfloat"]
cuda = ["cudarc"]
half = ["dep:half"]
bfloat = ["dep:half"]
slow_integral_fma_cuda = []

[[example]]
name = "hello_world"
required-features = []
