[package]
name = "constensor-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
cudarc = { workspace = true, optional = true }
thiserror.workspace = true
half = { workspace = true, optional = true }
dirs = "5.0.1"
rayon = "1.10.0"
petgraph.workspace = true
gemm = "0.18"
num_cpus = "1.16.0"

[features]
default = ["half", "bfloat"]
all = ["cuda", "half", "bfloat"]
cuda = ["cudarc"]
half = ["dep:half"]
bfloat = ["dep:half"]
slow_integral_fma_cuda = []

[[example]]
name = "hello_world"
required-features = []
