[package]
name = "constensor-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
cudarc = { workspace = true, optional = true }
thiserror.workspace = true
half = { workspace = true, optional = true }
dirs.workspace = true
rayon.workspace = true
petgraph.workspace = true
gemm.workspace = true
num_cpus.workspace = true
rand.workspace = true
rand_distr.workspace = true

[features]
default = []
all = ["cuda", "half", "bfloat"]
cuda = ["cudarc"]
half = ["dep:half"]
bfloat = ["dep:half"]
slow_integral_fma_cuda = []

[[example]]
name = "hello_world"
required-features = []
  
[dev-dependencies]
criterion = "0.5"
candle-core = "0.8"

[[bench]]
name = "cpu_graph"
path = "benches/cpu_graph.rs"
harness = false
