[package]
name = "constensor-cuda-kernels"
version = "0.1.0"
edition = "2021"

description = "CUDA kernels for Constensor"
repository = "TODO"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
bindgen_cuda = "0.1.5"

